--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -8,28 +8,34 @@
     text-align: left;
     outline: none;
     font-size: 15px;
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-  }
-  
-  .collapsible_text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.collapsible_text {
     margin-bottom: 10px;
-  }
-  
-  .collapsible_icon {
+}
+
+.collapsible_icon {
     font-size: 20px;
     font-weight: bold;
-    margin-left: auto; 
-  }
-    
-    .active, .collapsible_text:hover {
-      background-color: #e000255c;
-    }
-    
-   .collapsible_content {
-    display: none; 
+    margin-left: auto;
+}
+
+.active,
+.collapsible_text:hover {
+    background-color: #e000255c;
+}
+
+.collapsible_content {
+    display: none;
     overflow: hidden;
     background-color: #F1F1F1;
     padding: 0 18px;
-  }
+}
+
+.responsive {
+    width: 80%;
+    height: auto;
+}
